# gpwapp

./: .gitignore  CONTRATO_UPLOAD.md  README.md  RELEASE.md  package-lock.json  package.json
scripts/: make-latest-json.mjs  publish-release.ps1
src/: app.js  config.js  index.html  qc.js  scanner-ui.js  styles.css  supabase.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  converter.rs  lib.rs  main.rs  qc.rs  scanner.rs  uploader.rs
src/essentia/: gpw-analyzer.js
