[package]
name = "gpwapp"
version = "3.9.4"
description = "GPW Uploader - automated track upload for Ghost Producer World"
authors = ["Fernando"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gpwapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["fs", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
hound = "3.5"
ebur128 = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
# Runtime só para os testes (em produção o runtime vem do Tauri).
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

